--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="interitus.blue">
-    <meta property="og:url" content="https://interitus.blue/">
+    <meta property="og:title" content="arda420">
+    <meta property="og:url" content="https://arda420.com/">
     <meta property="og:description" content="the freakiest hack in the north">
     <meta content="#df659c" data-react-helmet="true" name="theme-color">
     <link rel="stylesheet" href="css/style.css">
@@ -21,7 +21,7 @@
     </div>
     <div id="panel">
         <div id="content">
-            <gradient>interitus.blue</gradient>
+            <gradient>arda420</gradient>
             <span class="infotext">
                 just the freakiest <div style="display: inline; font-weight: 800;"></div> cheat on <div style="display: inline; font-weight: 800;">legacy 2018.</div>.
             </span>
@@ -34,15 +34,11 @@
             </span>
             <span>
                 Ӿ
-                <a href="https://steamcommunity.com/id/rxot">steam</a>
+                <a href="https://steamcommunity.com/id/unknownpaster">steam</a>
             </span>
             <span>
                 Ӿ
-                <a href="https://discord.gg/hAaYzP3PzE">discord</a>
-            </span>
-            <span>
-                Ӿ
-                <a href="https://steamcommunity.com/groups/interitusblue">steam group</a>
+                <a href="https://steamcommunity.com/groups/legacieshunter">steam group</a>
             </span>
     </div>
 
