--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <div id="content">
             <gradient>arda420</gradient>
             <span class="infotext">
-                just the freakiest <div style="display: inline; font-weight: 800;"></div> cheat on <div style="display: inline; font-weight: 800;">legacy 2018.</div>.
+                just the freakiest <div style="display: inline; font-weight: 800;"></div> guy on <div style="display: inline; font-weight: 800;">earth.</div>.
             </span>
             <span class="infotext">
-                developed by retards such as; <div style="display: inline; font-weight: 800;">rx0t</div>.
+                owner of this site; <div style="display: inline; font-weight: 800;">arda420</div>.
             </span>
             <span>
                 Ӿ
